--- a/package.json
+++ b/package.json
@@ -15,31 +15,39 @@
   "license": "ISC",
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.2.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
+    "emotion": "^10.0.23",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "express-jwt-authz": "^2.3.1",
     "formik": "^1.5.8",
     "history": "^4.10.1",
     "hoist-non-react-statics": "^3.3.0",
+    "immutable": "^4.0.0-rc.12",
     "json-server": "^0.15.1",
     "jwks-rsa": "^1.6.0",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
     "next": "^9.0.5",
     "next-routes": "^1.4.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "nodemon": "^1.19.2",
     "react": "^16.9.0",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
     "react-typed": "^1.2.0",
     "reactstrap": "^8.0.1",
+    "slate": "^0.47.8",
+    "slate-react": "^0.22.9",
     "sweetalert2": "^8.17.3"
   }
 }
