--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "async-lock": "^1.2.2",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
@@ -44,10 +45,14 @@
     "react": "^16.9.0",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
+    "react-toastify": "^5.4.1",
     "react-typed": "^1.2.0",
     "reactstrap": "^8.0.1",
     "slate": "^0.47.8",
+    "slate-html-serializer": "^0.8.11",
+    "slate-plain-serializer": "^0.7.11",
     "slate-react": "^0.22.9",
+    "slugify": "^1.3.6",
     "sweetalert2": "^8.17.3"
   }
 }
