--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@zeit/next-sass": "^1.0.1",
     "async-lock": "^1.2.2",
     "axios": "^0.19.0",
+    "babel-plugin-transform-define": "^2.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
