--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "antd": "^3.26.3",
     "async-lock": "^1.2.2",
     "axios": "^0.19.0",
     "babel-plugin-transform-define": "^2.0.0",
